--- a/backend/code/displays/templates/displays/detail.html
+++ b/backend/code/displays/templates/displays/detail.html
@@ -1,4 +1,8 @@
-<H1>THIS IS THE DISPLAY DETAILS PAGE</H1>
+{% extends "displays/base.html" %}
+
+{% block content %}
+
+<H1>THIS IS THE DISPLAY DETAILS PAGE FOR A SINGLE DISPLAY</H1>
 
 {# This is a Django template comment #}
 
@@ -9,3 +13,5 @@ City: {{ displays.city }}<br>
 ST/Province: {{ displays.state_province }}<br>
 ZIP: {{ displays.zip }}<br>
 Country: {{ displays.country }}
+
+{% endblock content %}
