--- a/backend/code/displays/templates/displays/create.html
+++ b/backend/code/displays/templates/displays/create.html
@@ -4,7 +4,9 @@
 
 <form action="{% url 'displays:create' %}" method="post">
   {% csrf_token %}
-  {{ form }}  
+  <table>
+  {{ form.as_table }}  
+  </table>
   <input type="submit" value="Submit">
 </form>
 
