lots of changes

--- a/backend/code/displays/templates/displays/base.html
+++ b/backend/code/displays/templates/displays/base.html
@@ -1,6 +1,7 @@
 <header>
-    <a href="{% url 'displays:index' %}">Home</a> | 
-    <a href="{% url 'displays:create' %}">Create New Display</a>
+    <a href="{% url 'displays:index' %}">Home</a> |
+    <a href="{% url 'displays:results' %}">Search Displays</a> |
+    <a href="{% url 'displays:create' %}">Add Display</a>
 </header>
 
 {% block content %} {% endblock content %}
