--- a/backend/code/displays/templates/displays/index.html
+++ b/backend/code/displays/templates/displays/index.html
@@ -2,15 +2,6 @@
 
 {% block content %}
 
-Display Listing
-{% if displays %}
-    <ul>
-    {% for row in displays %}
-        <li><a href="{% url 'displays:detail' row.id %}">{{ row.display_name }} - {{ row.city }}, {{ row.state_province }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No displays are available.</p>
-{% endif %}
+<h1>THIS IS THE MAIN INDEX PAGE</h1>
 
 {% endblock content %}
