--- a/backend/code/displays/templates/displays/update.html
+++ b/backend/code/displays/templates/displays/update.html
@@ -2,13 +2,14 @@
 
 {% block content %}
 
-<!-- <form action="{% url 'displays:create' %}" method="post"> -->
+<h1>EDIT DISPLAY DETAILS FOR {{ data.display_name }}</h1><br>
+
 <form action="" method="post">
   {% csrf_token %}
   <table>
     {{ form }}
   </table>
-    <input type="submit" value="Submit">
+  <input type="submit" value="Submit">
 </form>
 
 {% endblock content %}
