adding in database to repo

--- a/backend/code/displays/templates/displays/base.html
+++ b/backend/code/displays/templates/displays/base.html
@@ -1,7 +1,20 @@
-<header>
-    <a href="{% url 'displays:index' %}">Home</a> |
-    <a href="{% url 'displays:results' %}">Search Displays</a> |
-    <a href="{% url 'displays:create' %}">Add Display</a>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Holiday Light Displays</title>
+</head>
+<body>
+    <header>
+        <a href="{% url 'displays:index' %}">Home</a> |
+        <a href="{% url 'displays:results' %}">Search Displays</a> |
+        <a href="{% url 'displays:create' %}">Add Display</a>
+    </header>
+</body>
+</html>
+
+
 
 {% block content %} {% endblock content %}
