--- a/backend/code/displays/templates/displays/base.html
+++ b/backend/code/displays/templates/displays/base.html
@@ -9,12 +9,13 @@
 <body>
     <header>
         <a href="{% url 'displays:index' %}">Home</a> |
-        <a href="{% url 'displays:results' %}">Search Displays</a> |
+        <a href="{% url 'displays:listing' %}">Display Listing</a> |
         <a href="{% url 'displays:create' %}">Add Display</a>
     </header>
+    
+    {% block content %} {% endblock content %}
+
+    <footer>Made with &#9829 in Minneapolis, MN</footer>
+
 </body>
 </html>
-
-
-
-{% block content %} {% endblock content %}
