Lots of UI updates

--- a/backend/code/displays/templates/displays/base.html
+++ b/backend/code/displays/templates/displays/base.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holiday Light Displays</title>
+    <link rel="stylesheet" href="{% static 'displays/styles.css' %}" />
 </head>
 <body>
-    <header>
-        <a href="{% url 'displays:index' %}">Home</a> |
-        <a href="{% url 'displays:listing' %}">Display Listing</a> |
-        <a href="{% url 'displays:create' %}">Add Display</a>
-    </header>
-    
-    {% block content %} {% endblock content %}
+    <div class="container">
+        <header class="header">
+            <a href="{% url 'displays:index' %}">Home</a> |
+            <a href="{% url 'displays:listing' %}">Display Listing</a> |
+            <a href="{% url 'displays:create' %}">Add Display</a>
+        </header>
 
-    <footer>Made with &#9829 in Minneapolis, MN</footer>
+        <main>
+        {% block content %} {% endblock content %}
+        </main>
 
+        <footer class="footer">Made with &#9829 in Minneapolis, MN</footer>
+    </div>
 </body>
 </html>
