--- a/backend/code/displays/templates/displays/index.html
+++ b/backend/code/displays/templates/displays/index.html
@@ -1,7 +1,7 @@
 {% extends "displays/base.html" %}
-
+{% load static %}
 {% block content %}
 
-<h1>THIS IS THE MAIN INDEX PAGE</h1>
+<img src="{% static 'displays/hld_logo.jpg' %}">
 
 {% endblock content %}
