--- a/backend/code/displays/templates/displays/update.html
+++ b/backend/code/displays/templates/displays/update.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>EDIT DISPLAY DETAILS FOR {{ data.display_name }}</h1><br>
+<h1>Edit details for <span style="color: Green;">{{ data.display_name }}</span></h1><br>
 
 <form action="" method="post">
   {% csrf_token %}
