--- a/backend/code/displays/templates/displays/index.html
+++ b/backend/code/displays/templates/displays/index.html
@@ -2,6 +2,6 @@
 {% load static %}
 {% block content %}
 
-<img src="{% static 'displays/hld_logo.jpg' %}">
+Welcome to HolidayLightDisplays.com!
 
 {% endblock content %}
